--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final.xhtml
@@ -10,7 +10,7 @@
 <p:fieldset legend="Summary" toggleable="true" toggleSpeed="500">
     <div class="Container100 Responsive100">
         <div class="Container50 Responsive50 Fleft">
-            <div class="Container100 Fleft">
+            <div class="Container100 Fleft TexAlCenter">
                 Based on the responses that you have given through on the
                 risk tolerance questionnaire we have selected the
                 <strong>#{tcmpb.fixedModelName}</strong> strategy for you.
@@ -78,9 +78,9 @@
     <div class="Container100 Responsive100">
         <div class="ContainerIndent">
             <div class="Wid100 Responsive100 Fleft">
-                <h3 class="BigTopic">
+                <h2 class="Fs20">
                     Portfolio Details
-                </h3>
+                </h2>
             </div>
         </div>
     </div>
