--- a/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
@@ -5,7 +5,8 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Conatainer100 ui-color paddingFA">
+    <div class="Container80 Responsive100 MarTop5 MarCenter ui-color paddingFA" style="margin-bottom: 15px;">
+   
         <div class="EmptyBox10"></div>
         <h3 class="FSResponsiveFA">What type of account would you
             like to open?</h3>
