Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
@@ -35,7 +35,7 @@
                     <p:ajax listener="#{tcmpb.onGoalChangeValue}"
                             update=":ceForm:p1hrznpanel, :ceForm:inputArea"/>
                     <f:selectItem itemLabel="Choose One" itemValue=""/>
-                    <f:selectItem itemLabel="Retirement" itemValue="Retirement" styleClass="abcSelected"/>
+                    <f:selectItem itemLabel="Retirement" itemValue="Retirement"/>
                     <f:selectItem itemLabel="College" itemValue="College"/>
                     <f:selectItem itemLabel="Building Wealth" itemValue="Wealth"/>
                     <f:selectItem itemLabel="Other" itemValue="Other"/>
