--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/cEdit.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/cEdit.xhtml
@@ -42,14 +42,28 @@
 
         <div class="Container100">
             <p style="font-style: italic; font-size: .8em; text-align:justify">
-                This portfolio is designed for illustration purposes only. The cumulative value of the portfolio
-                (net of fees) is based on the historical performance of the underlying securities and adjusted for changes in the asset allocation over time.
-                It does not take in affect any tax withholdings or distributions.
-                Past performance is no guarantee of future results. Any historical returns,
-                expected returns, or probability projections may not reflect actual future
-                performance. All securities involve risk and may result in loss. Not an offer,
-                solicitation of an offer, or advice to buy or sell securities in jurisdictions
-                where Invessence is not registered
+                Building Benjamins is a service of Tradition Capital Management, LLC., an SEC
+                (Securities and Exchange Commission) Registered Investment Adviser under the Federal
+                Investment Advisers Act, and provides portfolio management and related services for a fee.
+                Nothing should be considered a solicitation to buy or an offer to sell shares of any
+                security or service in any jurisdiction where the offer or solicitation would be unlawful
+                under the securities laws of such jurisdiction. Investing in stocks and other risk assets
+                could result in losses and positive returns are not guaranteed. Diversification only
+                reduces risk of capital loss but does not eliminate these risks. Expected return and
+                expected risk are not forecasted returns or risks but are only statistical definitions for
+                modeling purposes. Financial assets are also exposed to potential inflation and liquidity
+                risks. Past performance is no indication to future results, and all investments could lose
+                value in the future. Copies of the ADV and Privacy policy are available upon request.
+                The information provided is not written or intended as direct investment advice or
+                recommendations, tax or legal advice and in the context of such may not especially be
+                relied on for purposes of avoiding any tax penalties in any jurisdiction. Individuals are
+                encouraged to seek advice from their own respective tax, legal, accounting, or personal
+                planning professional as the case may be. Individuals involved in the estate planning
+                process should work with estate planning professionals. Neither the information presented
+                nor any opinion expressed constitutes a representation by us of a specific
+                investment or the purchase or sale of any securities. Asset allocation and
+                diversification do not ensure a profit or protect against loss in declining
+                markets.
             </p>
         </div>
     </p:panel>
